@@ -25,15 +25,6 @@ replace restart {
 	; peephole -1 removed redundant load.
 } if notVolatile(%1)
 
-// This one doesn't work currently since the peephole optimizer can't match lines generated by multiline macros: Bug #1570701
-//replace restart {
-//	pop	af
-//	ld	sp,%1
-//} by {
-//	; peephole -1a eleminated dead pop.
-//	ld	sp,%1
-//} if notUsed('a')
-
 replace restart {
 	ld	%1,%2
 } by {
@@ -1369,14 +1360,21 @@ replace restart {
 	; peephole 63 moved addition of constant 0x%3%2 to bc to constant.
 }
 
-//replace restart {
-//	pop	af
-//	ld	sp,%1
-//} by {
-//	; peephole 64 removed redundant pop af.
-//	ld	sp,%1
-//} if notUSed(#a')
-// Doesn't work due to bug preventing replacement of macro-generated asm.
+replace restart {
+	pop	af
+	ld	sp,%1
+} by {
+	; peephole 64 removed redundant pop af.
+	ld	sp,%1
+} if notUsed('a')
+
+replace restart {
+	inc	sp
+	ld	sp,%1
+} by {
+	; peephole 64a removed redundant inc sp.
+	ld	sp,%1
+} if notUsed('a')
 
 replace restart {
 	call	%1
